--- a/Meegopas_harmattan.desktop
+++ b/Meegopas_harmattan.desktop
@@ -4,8 +4,8 @@ Version=1.0
 Type=Application
 Terminal=false
 Name=Meegopas
-Exec=/opt/Meegopas/bin/Meegopas
-Icon=Meegopas64
+Exec=/usr/bin/invoker --type=d -s /opt/Meegopas/bin/Meegopas
+Icon=/usr/share/icons/hicolor/80x80/apps/Meegopas80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
