--- a/Meegopas_harmattan.desktop
+++ b/Meegopas_harmattan.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Type=Application
 Terminal=false
 Name=Meegopas
-Exec=/usr/bin/invoker --single-instance --splash=/opt/Meegopas/splash.jpg --type=d -s /opt/Meegopas/bin/Meegopas
+Exec=/usr/bin/invoker --single-instance --splash=/usr/share/Meegopas/splash-l.png --type=d /opt/Meegopas/bin/Meegopas
 Icon=/usr/share/icons/hicolor/80x80/apps/Meegopas80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
