- shortcuts implementation somewhat done - "near" indicator moved to the left side of the row

--- a/Meegopas_harmattan.desktop
+++ b/Meegopas_harmattan.desktop
@@ -4,8 +4,7 @@ Version=1.0
 Type=Application
 Terminal=false
 Name=Meegopas
-Exec=/usr/bin/invoker --single-instance --splash=/usr/share/Meegopas/splash-l.png --type=e /opt/Meegopas/bin/Meegopas parametri
+Exec=/usr/bin/invoker --single-instance --splash=/usr/share/Meegopas/splash-l.png --type=d /opt/Meegopas/bin/Meegopas
 Icon=/usr/share/icons/hicolor/80x80/apps/Meegopas80.png
-X-Window-Icon=
-X-HildonDesk-ShowInToolbar=true
+X-Maemo-Service=com.juknousi.meegopas
 X-Osso-Type=application/x-executable
